feat: currency update
